--- a/Template/Makefile
+++ b/Template/Makefile
@@ -1,8 +1,12 @@
 BUCKET=audioposts-site
 REGION=us-east-1
+REPO=template-macro
 
+update:
+	aws s3 cp sns-topics.yaml s3://$(BUCKET)/test/sns-topics.yaml
 
 macros:
+	pip install -r source/requirements.txt -t source
 	aws cloudformation package --template-file template.yaml --s3-bucket $(BUCKET) --output-template-file template.output 
 	aws cloudformation deploy --template-file ./template.output --stack-name TemplateMacro --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --region $(REGION) || echo "Continue"
 	rm -f ./template.output
@@ -14,5 +18,5 @@ example:
 
 example-boto3:
 	aws cloudformation package --template-file example-boto3.yaml --s3-bucket $(BUCKET) --output-template-file example-boto3.output  || echo "Continue"
-	aws cloudformation deploy --template-file ./example-boto3.output --stack-name TemplateExampleBoto3 --region $(REGION) || echo "Continue"
-	rm -f ./example-boto3.output
+	#aws cloudformation deploy --template-file ./example-boto3.output --stack-name TemplateExampleBoto3 --region $(REGION) || echo "Continue"
+	#rm -f ./example-boto3.output
