--- a/Template/template.yaml
+++ b/Template/template.yaml
@@ -28,17 +28,21 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Runtime: python2.7
-      CodeUri: lambda
+      CodeUri: source
       Handler: resource.handler
       Policies: PowerUserAccess
+      Layers: 
+        - !Sub arn:aws:lambda:${AWS::Region}:553035198032:layer:git:11
 
   MacroFunction:
     Type: AWS::Serverless::Function
     Properties:
       Runtime: python3.6
-      CodeUri: lambda
+      CodeUri: source
       Handler: macro.handler
       Role: !GetAtt TransformExecutionRole.Arn
+      Layers: 
+        - !Sub arn:aws:lambda:${AWS::Region}:553035198032:layer:git:11
       Environment:
         Variables:
           LAMBDA_ARN: !GetAtt ResourceFunction.Arn
