add Condition to Nested stack

--- a/Template/example.yaml
+++ b/Template/example.yaml
@@ -47,6 +47,7 @@ Resources:
 
   SNSTopicNested:
     Type: Template::Git
+    Condition: CreateResources
     Properties:
       Mode: Nested
       Provider: Github
