--- a/Template/example.yaml
+++ b/Template/example.yaml
@@ -13,7 +13,7 @@ Parameters:
     Default: master
   BucketName:
     Type: String
-    Default: example-bucket
+    Default: macro-template-default-831650818513-us-east-1
   TemplateKey:
     Type: String
     Default: Template/sns-topics-template.yaml
@@ -70,11 +70,24 @@ Resources:
       TemplateBucket: !Ref BucketName
       TemplateKey: !Ref TemplateKey
 
+  SNSTopicNestedDefault:
+    Type: Template::Git
+    Condition: CreateResources
+    Properties:
+      Mode: Nested
+      Provider: Github
+      Repo: !Ref RepositoryName
+      Branch: !Ref BranchName
+      Path: !Ref TemplateKey
+      Owner: !Ref GitHubUser
+      Parameters:
+        Name: 'sns-topic-template-github-nested-stack-default-bucket'
+        Environment: !Ref Environment
+
   SNSTopicS3:
     Type: Template::S3
     Properties:
       Mode: Inline
-      Provider: S3
       Bucket: !Ref BucketName
       Key: !Ref TemplateKey
       Parameters:
