--- a/Template/template.yaml
+++ b/Template/template.yaml
@@ -15,8 +15,10 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              Service: [lambda.amazonaws.com]
-            Action: ['sts:AssumeRole']
+              Service: 
+              - lambda.amazonaws.com
+            Action: 
+            - 'sts:AssumeRole'
       Path: /
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonS3FullAccess
@@ -27,14 +29,51 @@ Resources:
             Version: 2012-10-17
             Statement:
               - Effect: Allow
-                Action: ['logs:*']
+                Action: 
+                - 'logs:*'
                 Resource: 'arn:aws:logs:*:*:*'
+
+  SimulatorExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: 
+              - lambda.amazonaws.com
+            Action: 
+            - 'sts:AssumeRole'
+      Path: /
+      Policies:
+        - PolicyName: root
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action: 
+                - 'logs:*'
+                Resource: 'arn:aws:logs:*:*:*'
+
+  #SimulatorFunction:
+  #  Type: AWS::Serverless::Function
+  #  Properties:
+  #    Runtime: nodejs12.x
+  #    CodeUri: cfnsimulator/
+  #    Handler: index.handler
+  #    Role: !GetAtt SimulatorExecutionRole.Arn
+  #    Timeout: 300
+  #    Environment:
+  #      Variables:
+  #        REGION: !Ref AWS::Region
+  #        ACCOUNT: !Ref AWS::AccountId
 
   MacroFunction:
     Type: AWS::Serverless::Function
     Properties:
       Runtime: python3.6
-      CodeUri: source
+      CodeUri: source/
       Handler: macro.handler
       Role: !GetAtt TransformExecutionRole.Arn
       Timeout: 300
