--- a/Template/sns-topics-template.yaml
+++ b/Template/sns-topics-template.yaml
@@ -7,7 +7,10 @@ Parameters:
   Name:
     Type: String
   Environment:
-    Type: String   
+    Type: String
+
+Conditions: 
+  CreateResources: !Equals [ !Ref Environment, prod ] 
 
 Resources:
 
@@ -46,6 +49,35 @@ Resources:
         - Endpoint: !Ref Email
           Protocol: email
       TopicName: !Sub ${Name}-Low-Priority-Alarm-${Environment}
+
+  SNSTopiInlineCondition:
+    Type: Template::Git
+    Condition: CreateResources
+    Properties:
+      Mode: Inline
+      Provider: Github
+      Repo: !Ref RepositoryName
+      Branch: !Ref BranchName
+      Path: !Ref TemplateKey
+      Owner: !Ref GitHubUser
+      Parameters:
+        Name: 'sns-topic-template-codecommit-inline-stack-condition'
+        Environment: !Ref Environment
+
+  SNSTopicNestedDefault:
+    Type: Template::Git
+    Condition: CreateResources
+    DependsOn: Template::SNSTopiInlineCondition
+    Properties:
+      Mode: Nested
+      Provider: Github
+      Repo: !Ref RepositoryName
+      Branch: !Ref BranchName
+      Path: !Ref TemplateKey
+      Owner: !Ref GitHubUser
+      Parameters:
+        Name: 'sns-topic-template-github-nested-stack-default-bucket'
+        Environment: !Ref Environment
 
 Outputs:
   UrgentPriorityAlarm: 
