--- a/Template/example.yaml
+++ b/Template/example.yaml
@@ -44,53 +44,53 @@ Resources:
         Name: 'sns-topic-template-codecommit-inline-stack-condition'
         Environment: !Ref Environment
 
-#  SNSTopicNested:
-#    Type: Template::Git
-#    Properties:
-#      Mode: Nested
-#      Provider: Github
-#      Repo: !Ref RepositoryName
-#      Branch: !Ref BranchName
-#      Path: !Ref TemplateKey
-#      Owner: !Ref GitHubUser
-#      Parameters:
-#        Name: 'sns-topic-template-github-nested-stack'
-#        Environment: !Ref Environment
-#      NotificationARNs:
-#        - !Ref Template::SNSTopiInlineCondition::UrgentPriorityAlarm
-#        - !Ref HighPriorityAlarm
-#      Tags: 
-#        - Key: Environment
-#          Value: !Ref Environment
-#        - Key: TopicName
-#          Value: !GetAtt Template::SNSTopiInlineCondition::UrgentPriorityAlarm.TopicName
-#      TimeoutInMinutes: 1
-#      TemplateBucket: !Ref BucketName
-#      TemplateKey: !Ref TemplateKey
-#
-#  SNSTopicNestedDefault:
-#    Type: Template::Git
-#    Condition: CreateResources
-#    DependsOn: Template::SNSTopicNested
-#    Properties:
-#      Mode: Nested
-#      Provider: Github
-#      Repo: !Ref RepositoryName
-#      Branch: !Ref BranchName
-#      Path: !Ref TemplateKey
-#      Owner: !Ref GitHubUser
-#      Parameters:
-#        Name: 'sns-topic-template-github-nested-stack-default-bucket'
-#        Environment: !Ref Environment
-#
-#  SNSTopicS3:
-#    Type: Template::S3
-#    Condition: CreateResources
-#    DependsOn: Template::SNSTopiInlineCondition
-#    Properties:
-#      Mode: Inline
-#      Bucket: !Ref BucketName
-#      Key: !Ref TemplateKey
-#      Parameters:
-#        Name: 'sns-topic-template-s3-inline-stack'
-#        Environment: !Ref Environment#
+  SNSTopicNested:
+    Type: Template::Git
+    Properties:
+      Mode: Nested
+      Provider: Github
+      Repo: !Ref RepositoryName
+      Branch: !Ref BranchName
+      Path: !Ref TemplateKey
+      Owner: !Ref GitHubUser
+      Parameters:
+        Name: 'sns-topic-template-github-nested-stack'
+        Environment: !Ref Environment
+      NotificationARNs:
+        - !Ref Template::SNSTopiInlineCondition::UrgentPriorityAlarm
+        - !Ref HighPriorityAlarm
+      Tags: 
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: TopicName
+          Value: !GetAtt Template::SNSTopiInlineCondition::UrgentPriorityAlarm.TopicName
+      TimeoutInMinutes: 1
+      TemplateBucket: !Ref BucketName
+      TemplateKey: !Ref TemplateKey
+
+  SNSTopicNestedDefault:
+    Type: Template::Git
+    Condition: CreateResources
+    DependsOn: Template::SNSTopicNested
+    Properties:
+      Mode: Nested
+      Provider: Github
+      Repo: !Ref RepositoryName
+      Branch: !Ref BranchName
+      Path: !Ref TemplateKey
+      Owner: !Ref GitHubUser
+      Parameters:
+        Name: 'sns-topic-template-github-nested-stack-default-bucket'
+        Environment: !Ref Environment
+
+  SNSTopicS3:
+    Type: Template::S3
+    Condition: CreateResources
+    DependsOn: Template::SNSTopiInlineCondition
+    Properties:
+      Mode: Inline
+      Bucket: !Ref BucketName
+      Key: !Ref TemplateKey
+      Parameters:
+        Name: 'sns-topic-template-s3-inline-stack'
+        Environment: !Ref Environment#
