--- a/Template/sns-topics-template.yaml
+++ b/Template/sns-topics-template.yaml
@@ -41,20 +41,6 @@ Resources:
           Protocol: email
       TopicName: !Sub ${Name}-Medium-Priority-Alarm-${Environment}
 
-  SNSTopiInlineCondition:
-    Type: Template::Git
-    Condition: CreateResources
-    Properties:
-      Mode: Inline
-      Provider: Github
-      Repo: !Ref RepositoryName
-      Branch: !Ref BranchName
-      Path: !Ref TemplateKey
-      Owner: !Ref GitHubUser
-      Parameters:
-        Name: 'sns-topic-template-codecommit-inline-stack-condition'
-        Environment: !Ref Environment
-
   LowPriorityAlarm:
     Type: "AWS::SNS::Topic"
     Properties: 
@@ -65,25 +51,25 @@ Resources:
       TopicName: !Sub ${Name}-Low-Priority-Alarm-${Environment}
 
 Outputs:
-  UrgentPriorityAlarm: 
+  UrgentPriorityAlarmArn: 
     Description: Urgent priority SNS topic ARN 
     Value: !Ref UrgentPriorityAlarm
     Export:
       Name:
         !Sub "${AWS::StackName}-urgent-${Environment}"
-  HighPriorityAlarm: 
+  HighPriorityAlarmArn: 
     Description: High priority SNS topic ARN 
     Value: !Ref HighPriorityAlarm
     Export:
       Name:
         !Sub "${AWS::StackName}-high-${Environment}"
-  MediumPriorityAlarm: 
+  MediumPriorityAlarmArn: 
     Description: Medium priority SNS topic ARN 
     Value: !Ref MediumPriorityAlarm
     Export:
       Name:
         !Sub "${AWS::StackName}-medium-${Environment}"
-  LowPriorityAlarm: 
+  LowPriorityAlarmArn: 
     Description: Low priority SNS topic ARN 
     Value: !Ref LowPriorityAlarm
     Export:
