--- a/Template/test/macro_top_test.yaml
+++ b/Template/test/macro_top_test.yaml
@@ -66,7 +66,7 @@ Resources:
           Value: !GetAtt Template::SNSTopiInlineCondition::UrgentPriorityAlarm.TopicName
       TimeoutInMinutes: 1
       TemplateBucket: !Ref BucketName
-      TemplateKey: !Ref TemplateKey
+      TemplatePrefix: !Ref TemplateKey
 
   SNSTopicNestedDefault:
     Type: Template::Git
