--- a/Template/test/utils_resources_top_test.yaml
+++ b/Template/test/utils_resources_top_test.yaml
@@ -72,7 +72,7 @@ Resources:
           Value: !GetAtt 'Template::SNSTopiInlineCondition::UrgentPriorityAlarm.TopicName'
       TimeoutInMinutes: 1
       TemplateBucket: !Ref 'BucketName'
-      TemplateKey: !Ref 'TemplateKey'
+      TemplatePrefix: !Ref 'TemplateKey'
   SNSTopicNestedDefault:
     Type: Template::Git
     Condition: CreateResources
