--- a/Template/samples/example-lambda.yaml
+++ b/Template/samples/example-lambda.yaml
@@ -19,7 +19,7 @@ Parameters:
     Default: lambda/lambda-shutdown-instance.yml
   OAuthToken:
     Type: String
-    Default: fqJxMgWrxY_mZGReVhV2
+    Default: YsfRzFo-Fa5HxhhCui_-
   Environment:
     Type: String
     Default: prod
