change utils to loader

--- a/Template/samples/example-vpc.yaml
+++ b/Template/samples/example-vpc.yaml
@@ -19,7 +19,7 @@ Parameters:
     Default: single-ec2-bastion/bastion.yaml
   GitLabToken:
     Type: String
-    Default: UzzQB7j2ZkFzexsfeZyJ
+    Default: 
   Environment:
     Type: String
     Default: prod
