--- a/Template/samples/example-db.yaml
+++ b/Template/samples/example-db.yaml
@@ -13,7 +13,7 @@ Parameters:
     Default: rds/rds-old.json
   GitLabToken:
     Type: String
-    Default: JeqznsSA98T48ev-SLFg
+    Default: f-R8ccD4V8zu_CYGz18Y
   Environment:
     Type: String
     Default: prod
